--- a/style.css
+++ b/style.css
@@ -16,25 +16,44 @@
 }
 
 .logo-1 {
-  background-image: url("./static_assets/logo/logo.png");
+  background-image: url("./static_assets/logo/amajo-logo.png");
   z-index: 100;
 }
 
 /* ロゴのボタン */
 #logoButton {
-  /* display: none; */
+  user-select: none;
   border: 1px solid white;
   text-align: center;
-  width: fit-content;
-  padding: 10px;
-  margin: 10px;
-  background: rgba(0, 0, 0, 0.5);
-  color: white;
+  cursor: pointer;
+  font-size: 2rem;
+}
+
+#nav.on div#logoButton:before {
+  background-image: url(./static_assets/logo/amajo-logo.png);
+  background-position: 0%;
+  background-size: contain;
+  background-repeat: repeat;
+  content: "";
   position: absolute;
-  z-index: 101;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
-  cursor: pointer;
+  z-index: -2;
+  animation: logoTranslate 20s linear alternate infinite;
+}
+
+#nav.on div#logoButton:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background: black;
+  opacity: 0.7;
 }
 
 /*ロゴが降るアニメーション*/
@@ -56,5 +75,11 @@
     opacity: 0;
     top: 100vh; /*コンテナの一番下*/
     transform: rotate(1080deg); /*360degで一回転*/
+  }
+}
+/* ロゴが横移動するアニメーション */
+@keyframes logoTranslate {
+  to {
+    background-position: 100%;
   }
 }
