--- a/index.css
+++ b/index.css
@@ -39,14 +39,20 @@ body {
   line-height: 1;
   top: 50%;
   left: 50%;
-  background: rgba(0, 0, 0, 0.5);
+  transform: translate(-50%, -50%) scale(1.3);
+  background: rgba(0, 0, 0, 0.7);
   padding: 1rem;
   border: solid white 1px;
   box-shadow: 3px 10px 10px black;
   overflow: hidden;
   text-align: justify;
   min-width: 500px;
-  /* user-select: none; */
+  font-weight: bold;
+}
+
+#commentary p {
+  padding: 0 1rem;
+  font-family: system-ui;
 }
 #commentary .clickToClose {
   line-height: 0.7;
@@ -55,6 +61,10 @@ body {
   position: absolute;
   z-index: 1000;
   font-family: "游明朝";
+}
+
+#commentary .type {
+  text-shadow: 0px 3px 3px black;
 }
 
 #commentary .dialogCursor {
@@ -262,10 +272,10 @@ ul#l-nav.on span:after {
 }
 
 #l-nav li:first-of-type {
-  margin-top: 3em;
+  margin-top: 2rem;
 }
 #l-nav li + li {
-  margin-top: 2em;
+  margin-top: 2rem;
 }
 
 #l-nav.on {
@@ -768,20 +778,33 @@ li#commentaryGame {
   border: solid 1px white;
   /* color: #59b1eb; */
   color: white;
-  padding: 0.8rem;
+  /* padding: 0.8rem; */
+  font-size: 2rem;
 }
 li#solution {
-  transition: 3s;
-  transition-delay: 1s;
+  transition: 1.5s;
   transform: translateX(-120%);
 }
 li#solution.add {
   transform: none;
 }
 li#solution + li {
-  transform: translateY(-33%);
+  transform: translateX(-120%);
   transition: 1.5s;
-  transition-delay: 1s;
+}
+li#solution + li + li {
+  transition: 1.5s;
+}
+li#solution + li + li {
+  height: 550px;
+  display: block;
+  overflow: scroll;
+  width: 400px;
+  transform: translateY(-79%);
+}
+
+li#solution.add + li + li {
+  transform: translate(133%, -79%);
 }
 
 li#solution.add + li {
